AcademyKorea : (전국 학원 서칭) 미니프로젝트

--- a/testdb/src/main/resources/templates/testdb/event.html
+++ b/testdb/src/main/resources/templates/testdb/event.html
@@ -25,12 +25,12 @@
             <li class="event_item">
                 <img src="/img/slide-image04.png">
             </li>
-            <li class="event_item">
-                <img src="/img/slide-image01.png">
-            </li>
-            <li class="event_item">
-                <img src="/img/slide-image02.png">
-            </li>
+<!--            <li class="event_item">-->
+<!--                <img src="/img/slide-image01.png">-->
+<!--            </li>-->
+<!--            <li class="event_item">-->
+<!--                <img src="/img/slide-image02.png">-->
+<!--            </li>-->
         </ul>
     </div>
     <th:block layout:fragment="footer" th:include="@{/fragments/footer}"></th:block>
